crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__infix__tests__infix_non.snap
---
source: crates/nash-parse/src/declaration/infix.rs
description: infix non 4 (==) = eq
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 2,
            column: 1,
        },
    },
    value: Infix {
        op: "==",
        associativity: None,
        precedence: Precedence(
            4,
        ),
        name: "eq",
    },
}
